--- a/css/styles.css
+++ b/css/styles.css
@@ -494,6 +494,12 @@ progress {
   text-align: justify;
 }
 
+.lead-center {
+  font-size: 1.25rem;
+  font-weight: 300;
+  text-align: center;
+}
+
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
   font-weight: 300;
